add custom table

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,5 +1,21 @@
 {
+  "lang_api_access": "Api Access",
+  "lang_user_login": "User Login",
+  "lang_full_name": "Full Name",
+  "lang_site_name": "Site Name",
   "lang_report": "Report",
+  "lang_last_updated": "Last Update",
+  "lang_create_time": "Create Time",
+  "lang_note": "Note",
+  "lang_last_active": "Last Active",
+  "lang_actor": "Actor",
+  "lang_closed": "Closed",
+  "lang_status": "Status",
+  "lang_admin_blocked": "Admin Blocked",
+  "lang_inactive": "Inactive",
+  "lang_security_blocked": "Security Blocked",
+  "lang_pending_email_verification": "Pending Email Verification",
+  "lang_active": "Active",
   "lang_articles": "Articles",
   "lang_create_new_article": "Create New Articles",
   "lang_segments": "Segments",
