--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,4 +1,13 @@
 {
+  "lang_all_sites": "All sites",
+  "lang_go_to_first_page": "Go to first page",
+  "lang_go_to_last_page": "Go to last page",
+  "lang_go_to_next_page": "Go to next page",
+  "lang_go_to_previous_page": "Go to previous page",
+  "lang_preview_page": "Preview Page",
+  "lang_next_page": "Next Page",
+  "lang_rows_per_page": "Rows per page:",
+  "lang_displayed_rows_pagination": "{{from}}-{{to}} of {{count}}",
   "lang_api_access": "Api Access",
   "lang_user_login": "User Login",
   "lang_full_name": "Full Name",
