--- a/src/locales/vn.json
+++ b/src/locales/vn.json
@@ -1,5 +1,29 @@
 {
-  "lang_report": "Báo cáo",
+  "lang_go_to_first_page": "Go to first page",
+  "lang_go_to_last_page": "Go to last page",
+  "lang_go_to_next_page": "Trang sau",
+  "lang_go_to_previous_page": "Go to previous page",
+  "lang_preview_page": "Preview Page",
+  "lang_next_page": "Next Page",
+  "lang_rows_per_page": "Rows per page:",
+  "lang_displayed_rows_pagination": "{{from}}-{{to}} of {{count}}",
+  "lang_api_access": "Api Access",
+  "lang_user_login": "User Login",
+  "lang_full_name": "Full Name",
+  "lang_site_name": "Site Name",
+  "lang_report": "Report",
+  "lang_last_updated": "Last Update",
+  "lang_create_time": "Create Time",
+  "lang_note": "Note",
+  "lang_last_active": "Last Active",
+  "lang_actor": "Actor",
+  "lang_closed": "Closed",
+  "lang_status": "Status",
+  "lang_admin_blocked": "Admin Blocked",
+  "lang_inactive": "Inactive",
+  "lang_security_blocked": "Security Blocked",
+  "lang_pending_email_verification": "Pending Email Verification",
+  "lang_active": "Active",
   "lang_articles": "Articles",
   "lang_create_new_article": "Create New Articles",
   "lang_segments": "Segments",
