--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,4 +1,5 @@
 {
+  "lang_quick_filter": "Quick filter",
   "lang_all_sites": "All sites",
   "lang_go_to_first_page": "Go to first page",
   "lang_go_to_last_page": "Go to last page",
