--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,4 +1,7 @@
 {
+  "lang_force_to_change_password": "Force to Change Password",
+  "lang_reset_password": "Reset Password",
+  "lang_user_detail": "User Detail",
   "lang_quick_filter": "Quick filter",
   "lang_all_sites": "All sites",
   "lang_go_to_first_page": "Go to first page",
