update table edit mode

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,4 +1,5 @@
 {
+  "lang_edit": "Edit",
   "lang_force_to_change_password": "Force to Change Password",
   "lang_reset_password": "Reset Password",
   "lang_user_detail": "User Detail",
