--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,4 +1,6 @@
 {
+  "lang_save": "Save",
+  "lang_cancel": "Cancel",
   "lang_edit": "Edit",
   "lang_force_to_change_password": "Force to Change Password",
   "lang_reset_password": "Reset Password",
