add create new segment to navbar

--- a/src/locales/vn.json
+++ b/src/locales/vn.json
@@ -27,6 +27,8 @@
   "lang_articles": "Articles",
   "lang_create_new_article": "Create New Articles",
   "lang_segments": "Segments",
+  "lang_create_new_segments": "Create New Segment",
+  "lang_segments_management": "Segments Management",
   "lang_subscribers": "Subscribers",
   "lang_notifications_management": "Notifications Management",
   "lang_create_new_notification": "Create New Notification",
