update global modal

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,5 +1,6 @@
 {
   "lang_save": "Save",
+  "lang_confirm": "Confirm",
   "lang_cancel": "Cancel",
   "lang_edit": "Edit",
   "lang_force_to_change_password": "Force to Change Password",
