update base, notifications, segments

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,4 +1,45 @@
 {
+  "lang_hide": "Hide",
+  "lang_show_more": "Show more",
+  "lang_number_of_subscribers": "Number of Subscribers",
+  "lang_segment_id": "Segment Id",
+  "lang_segment_name": "Segment Name",
+  "lang_generate": "Generate",
+  "lang_triggered": "Triggered",
+  "lang_pending": "Pending",
+  "lang_audiences": "Audiences",
+  "lang_delivery_type": "Delivery Type",
+  "lang_title": "Title",
+  "lang_message": "Message",
+  "lang_username": "Username",
+  "lang_entity_id": "Entity Id",
+  "lang_url": "Url",
+  "lang_expiration_time": "Expiratio Time",
+  "lang_schedule": "Schedule",
+  "lang_trigger_time": "Trigger Time",
+  "lang_attemped": "Attemped",
+  "lang_delivered": "Delivered",
+  "lang_clicked": "Clicked",
+  "lang_delete": "Delete",
+  "lang_view_detail": "View detail",
+  "lang_force_to_change_password_unsuccessfully": "Force to change password unsuccessfully",
+  "lang_force_to_change_password_successfully": "Force to change password  successfully",
+  "lang_confirm_force_change_password": "Do you want to force user login <0>{{user}}</0> to change password from next login?",
+  "lang_confirm_cancel_force_change_password": "Do you want to cancel changing password request for user login <0>{{user}}</0>?",
+  "lang_timeout_cannot_be_connected_server": "Timeout, cannot be connected server",
+  "lang_sending_reset_password_success": "Send reset password request successfully",
+  "lang_sending_reset_password_request": "Sending reset password request...",
+  "lang_confirm_reset_password_for_user": "Do you want to reset password for user login <0>{{user}}</0>",
+  "lang_show_hide_table_columns": "Show/Hide Table Columns",
+  "lang_show_columns": "Show Columns",
+  "lang_view_columns": "View Columns",
+  "lang_print": "Print",
+  "lang_download_csv": "Download CSV",
+  "lang_sort": "Sort",
+  "lang_no_data": "No data",
+  "lang_enter_your_email_to_edit_count_user_logins": "Enter your email to edit {{count}} user logins",
+  "lang_enter_your_email_to_edit_user_login": "Enter your email to edit user login",
+  "lang_your_email": "Your email",
   "lang_save": "Save",
   "lang_confirm": "Confirm",
   "lang_cancel": "Cancel",
@@ -19,13 +60,13 @@
   "lang_api_access": "Api Access",
   "lang_user_login": "User Login",
   "lang_full_name": "Full Name",
-  "lang_site_name": "Site Name",
+  "lang_sitename": "Sitename",
   "lang_full_name_required": "Full name is required",
   "lang_description": "Description",
   "lang_notes": "notes",
   "lang_user_details": "user details",
   "lang_report": "Report",
-  "lang_last_updated": "Last Update",
+  "lang_last_update": "Last Update",
   "lang_create_time": "Create Time",
   "lang_note": "Note",
   "lang_last_active": "Last Active",
