--- a/src/locales/vn.json
+++ b/src/locales/vn.json
@@ -10,9 +10,9 @@
   "lang_api_access": "Api Access",
   "lang_user_login": "User Login",
   "lang_full_name": "Full Name",
-  "lang_site_name": "Site Name",
+  "lang_sitename": "Site Name",
   "lang_report": "Report",
-  "lang_last_updated": "Last Update",
+  "lang_last_update": "Last Update",
   "lang_create_time": "Create Time",
   "lang_note": "Note",
   "lang_last_active": "Last Active",
