handleget uuser detail and check user login id when edit user amnagement

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,4 +1,5 @@
 {
+  "lang_email_did_not_match": "The confirmation email does not match the login email",
   "lang_hide": "Hide",
   "lang_show_more": "Show more",
   "lang_number_of_subscribers": "Number of Subscribers",
