--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -61,6 +61,9 @@
   "lang_user_login": "User Login",
   "lang_full_name": "Full Name",
   "lang_sitename": "Sitename",
+  "lang__required": "Full name is required",
+  "lang_user_login_required": "User login is required",
+  "lang_site_name_required": "Sitename is required",
   "lang_full_name_required": "Full name is required",
   "lang_description": "Description",
   "lang_notes": "notes",
