build html css for create user segment

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,9 +1,12 @@
 {
+  "lang_select_segment_subcriber": "Please select subscribers",
+  "lang_create": "Create",
   "lang_hide": "Hide",
   "lang_show_more": "Show more",
   "lang_number_of_subscribers": "Number of Subscribers",
   "lang_segment_id": "Segment Id",
   "lang_segment_name": "Segment Name",
+  "lang_segment_name_is_required": "Please enter segment name",
   "lang_generate": "Generate",
   "lang_triggered": "Triggered",
   "lang_pending": "Pending",
