--- a/src/locales/vn.json
+++ b/src/locales/vn.json
@@ -1,4 +1,6 @@
 {
+  "lang_select_segment_subcriber": "Please select subscribers",
+  "lang_create": "Create",
   "lang_go_to_first_page": "Go to first page",
   "lang_go_to_last_page": "Go to last page",
   "lang_go_to_next_page": "Trang sau",
