add key & ghep api

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,4 +1,11 @@
 {
+  "lang_notes": "Notes",
+  "lang_full_name_max_length": "Full name must include less than 64 characters",
+  "lang_description_max_length": "Description must include less than 255 characters",
+  "lang_status_required": "Status is required",
+  "lang_create_user_successfully": "Create user successfully",
+  "lang_return": "Return",
+  "lang_clear_data": "Clear Data",
   "lang_type_your_articles": "Type your Articles...",
   "lang_there_is_nothing_to_change": "There is nothing to change",
   "lang_update_user_information_successfully": "Update user information successfully.",
@@ -74,7 +81,6 @@
   "lang_site_name_required": "Sitename is required",
   "lang_full_name_required": "Full name is required",
   "lang_description": "Description",
-  "lang_notes": "notes",
   "lang_user_details": "user details",
   "lang_report": "Report",
   "lang_last_update": "Last Update",
