update login change password flow

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,4 +1,5 @@
 {
+  "lang_confirm_password": "Confirm Password",
   "lang_content": "Content",
   "lang_notes": "Notes",
   "lang_full_name_max_length": "Full name must include less than 64 characters",
