--- a/src/locales/vn.json
+++ b/src/locales/vn.json
@@ -1,4 +1,7 @@
 {
+  "lang_preview_new_segment": "preview new segment",
+  "lang_create_segment_successfully": "Create segment successfully",
+  "lang_create_segment_unsuccessfully": "Create segment unsuccessfully",
   "lang_select_segment_subcriber": "Please select subscribers",
   "lang_create": "Create",
   "lang_go_to_first_page": "Go to first page",
