--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,4 +1,5 @@
 {
+  "lang_segment_name_min_max_characters": "Segment name must include 3 - 64 characters",
   "lang_preview_new_segment": "preview new segment",
   "lang_create_segment_successfully": "Create segment successfully",
   "lang_create_segment_unsuccessfully": "Create segment unsuccessfully",
