--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,4 +1,6 @@
 {
+  "lang_customer_support_email": "Customer support: <0/> <1>{{email}}</1>",
+  "lang_powered_by": "Powered by",
   "lang_segment_details": "segment details",
   "lang_sign_out": "Sign Out",
   "lang_confirm_logout": "Are you sure that you want to sign out?",
