--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,4 +1,8 @@
 {
+  "lang_delete_segment_successfully": "Delete segment successfully",
+  "lang_delete_segment_unsuccessfully": "Delete segment unsuccessfully",
+  "lang_delete_user_successfully": "Delete user successfully",
+  "lang_delete_user_unsuccessfully": "Delete user unsuccessfully",
   "lang_customer_support_email": "Customer support: <0/> <1>{{email}}</1>",
   "lang_powered_by": "Powered by",
   "lang_segment_details": "segment details",
