--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,4 +1,5 @@
 {
+  "lang_logout": "Logout",
   "lang_delete_segment_successfully": "Delete segment successfully",
   "lang_delete_segment_unsuccessfully": "Delete segment unsuccessfully",
   "lang_delete_user_successfully": "Delete user successfully",
