--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -20,6 +20,7 @@
   "lang_status_required": "Status is required",
   "lang_create_user_successfully": "Create user successfully",
   "lang_return": "Return",
+  "lang_clear": "Clear",
   "lang_clear_data": "Clear Data",
   "lang_type_your_articles": "Type your Articles...",
   "lang_there_is_nothing_to_change": "There is nothing to change",
@@ -131,6 +132,7 @@
   "lang_email": "Email",
   "lang_email_invalid": "Invalid email",
   "lang_email_required": "Email is required",
+  "lang_user_login_is_invalid": "User login is invalid",
   "lang_password_required": "Your password must include 8-25 characters and contain at least one lowercase, one capital letter and one number",
   "lang_password": "Password",
   "lang_set_pin_tip": "A 6-Digit PIN is required. Security PIN will help you login quickly and protect your account.",
