add modal nested

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -11,7 +11,7 @@
   "lang_delete_user_unsuccessfully": "Delete user unsuccessfully",
   "lang_customer_support_email": "Customer support: <0/> <1>{{email}}</1>",
   "lang_powered_by": "Powered by",
-  "lang_segment_details": "segment details",
+  "lang_segment_details": "Segment Details",
   "lang_sign_out": "Sign Out",
   "lang_confirm_logout": "Are you sure that you want to sign out?",
   "lang_segment_name_min_max_characters": "Segment name must include 3 - 64 characters",
