--- a/src/locales/vn.json
+++ b/src/locales/vn.json
@@ -1,11 +1,12 @@
 {
+  "lang_segment_name_is_required": "Segment name is required",
   "lang_edit_segment": "Edit Segment",
   "lang_confirm_edit_segment": "Enter your email to edit segment <0>{{segment}}</0>?",
   "lang_segment_name_min_max_characters": "Segment name must include 3 - 64 characters",
   "lang_preview_new_segment": "preview new segment",
   "lang_create_segment_successfully": "Create segment successfully",
   "lang_create_segment_unsuccessfully": "Create segment unsuccessfully",
-  "lang_select_segment_subcriber": "Please select subscribers",
+  "lang_select_segment_subcriber": "Subscribers is required",
   "lang_create": "Create",
   "lang_go_to_first_page": "Go to first page",
   "lang_go_to_last_page": "Go to last page",
