--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,4 +1,5 @@
 {
+  "lang_network_error": "Network Error",
   "lang_edit_segment": "Edit segment",
   "lang_preview_create_new_user": "Preview Create New User",
   "lang_there_is_no_change_in_the_segment_information": "There is no change in the segment information",
@@ -158,6 +159,7 @@
   "lang_set_your_pin": "Set Your PIN",
   "lang_pin_not_match": "PIN did not match. Please try again",
   "lang_confirm_your_new_pin": "Confirm Your New PIN",
+  "error_code_rate_limit": "API rate limit exceeded",
   "error_code_undefined": "Something went wrong from systems!",
   "error_code_TOKEN_WAS_CHANGED": "You have been signed out due to changing password!",
   "error_code_INVALID_PARAM": "Invalid information, please try again",
