show modal detail & edit user

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -109,7 +109,7 @@
   "lang_site_name_required": "Sitename is required",
   "lang_full_name_required": "Full name is required",
   "lang_description": "Description",
-  "lang_user_details": "user details",
+  "lang_user_details": "User Details",
   "lang_report": "Report",
   "lang_last_update": "Last Update",
   "lang_create_time": "Create Time",
