--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -29,6 +29,7 @@
   "lang_full_name_max_length": "Full name must include less than 64 characters",
   "lang_description_max_length": "Description must include less than 255 characters",
   "lang_status_required": "Status is required",
+  "lang_update_user_successfully": "Update user information successfully",
   "lang_create_user_successfully": "Create user successfully",
   "lang_return": "Return",
   "lang_clear": "Clear",
