fix bug CMS-118

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,4 +1,8 @@
 {
+  "lang_no": "No",
+  "lang_yes": "Yes",
+  "lang_confirm_cancel": "Confirm Cancellation",
+  "lang_confirm_cancel_text": "Changes you made so far will not be saved.<br/> Are you sure you want to cancel?",
   "lang_email_too_long": "Your user login must use 3-255 characters and cannot contain spaces",
   "lang_connecting": "Connecting...",
   "lang_view_user_detail": "View User Detail",
