--- a/src/locales/vn.json
+++ b/src/locales/vn.json
@@ -1,4 +1,8 @@
 {
+  "lang_no": "No",
+  "lang_yes": "Yes",
+  "lang_confirm_cancel": "Confirm Cancellation",
+  "lang_confirm_cancel_text": "Changes you made so far will not be saved.<br/> Are you sure you want to cancel?",
   "lang_segment_name_is_required": "Segment name is required",
   "lang_edit_segment": "Edit Segment",
   "lang_confirm_edit_segment": "Enter your email to edit segment <0>{{segment}}</0>?",
