--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -26,6 +26,8 @@
   "lang_segment_name_min_max_characters": "Segment name must include 3 - 64 characters",
   "lang_preview_new_segment": "preview new segment",
   "lang_create_segment_successfully": "Create segment successfully",
+  "lang_send_notification_successfully": "Send notification successfully",
+  "lang_send_notification_unsuccessfully": "Send notification unsuccessfully",
   "lang_create_segment_unsuccessfully": "Create segment unsuccessfully",
   "lang_confirm_password": "Confirm Password",
   "lang_content": "Content",
