--- a/src/locales/vn.json
+++ b/src/locales/vn.json
@@ -1,6 +1,8 @@
 {
   "lang_no": "No",
   "lang_yes": "Yes",
+  "lang_update_segment_successfully": "The segment information has been updated successfully",
+  "lang_update_segment_unsuccessfully": "Unable to update segment information",
   "lang_confirm_cancel": "Confirm Cancellation",
   "lang_confirm_cancel_text": "Changes you made so far will not be saved.<br/> Are you sure you want to cancel?",
   "lang_segment_name_is_required": "Segment name is required",
