--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,4 +1,8 @@
 {
+  "lang_expire": "Expire",
+  "lang_type_url": "Type URL",
+  "lang_notification_type": "Notification type",
+  "lang_segment": "Segment",
   "lang_update_segment_successfully": "The segment information has been updated successfully",
   "lang_update_segment_unsuccessfully": "Unable to update segment information",
   "lang_field_required": "Please fill in this field",
