change body to call segment noti

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,4 +1,5 @@
 {
+  "lang_preview_new_notifications": "preview new notifications",
   "lang_expire": "Expire",
   "lang_type_url": "Type URL",
   "lang_notification_type": "Notification type",
