change modal noti for type direct

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,4 +1,5 @@
 {
+  "lang_notifications_details": "Notifications Details",
   "lang_type": "Type",
   "lang_article": "Article",
   "lang_weeks": "Weeks",
