fix bug CMS-148

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,4 +1,5 @@
 {
+  "lang_no_matching_records_found": "Sorry, no matching records found",
   "lang_notifications_details": "Notifications Details",
   "lang_type": "Type",
   "lang_article": "Article",
