--- a/src/locales/vn.json
+++ b/src/locales/vn.json
@@ -1,4 +1,5 @@
 {
+  "lang_no_matching_records_found": "Sorry, no matching records found",
   "lang_no": "No",
   "lang_yes": "Yes",
   "lang_update_segment_successfully": "The segment information has been updated successfully",
