--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,4 +1,5 @@
 {
+  "lang_describe_confirm_edit": "Enter your email to edit notification",
   "lang_edit_notification": "Edit Notification",
   "lang_no_matching_records_found": "Sorry, no matching records found",
   "lang_notifications_details": "Notifications Details",
