--- a/src/locales/vn.json
+++ b/src/locales/vn.json
@@ -9,7 +9,8 @@
   "lang_confirm_cancel": "Confirm Cancellation",
   "lang_confirm_cancel_text": "Changes you made so far will not be saved.<br/> Are you sure you want to cancel?",
   "lang_segment_name_is_required": "Please enter segment name",
-  "lang_edit_segment": "Edit Segment",
+  "lang_edit_segment": "EDIT SEGMENT",
+  "lang_segment_details": "SEGMENT DETAILS",
   "lang_confirm_edit_segment": "Enter your email to edit segment <0>{{segment}}</0>?",
   "lang_segment_name_min_max_characters": "Segment name must include 3 - 64 characters",
   "lang_preview_new_segment": "preview new segment",
