--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -37,7 +37,7 @@
   "lang_email_too_long": "Your user login must use 3-255 characters and cannot contain spaces",
   "lang_connecting": "Connecting...",
   "lang_view_user_detail": "View User Detail",
-  "lang_edit_segment": "EDIT SEGMENT",
+  "lang_edit_segment": "Edit segment",
   "lang_preview_create_new_user": "Preview Create New User",
   "lang_there_is_no_change_in_the_segment_information": "There is no change in the segment information",
   "lang_confirm_edit_segment": "Enter your email to edit segment <0>{{segment}}</0>?",
@@ -51,7 +51,7 @@
   "lang_delete_user_unsuccessfully": "Delete user unsuccessfully",
   "lang_customer_support_email": "Customer support: <0/> <1>{{email}}</1>",
   "lang_powered_by": "Powered by",
-  "lang_segment_details": "SEGMENT DETAILS",
+  "lang_segment_details": "Segment Details",
   "lang_sign_out": "Sign Out",
   "lang_confirm_logout": "Are you sure that you want to sign out?",
   "lang_segment_name_min_max_characters": "Segment name must include 3 - 64 characters",
@@ -209,6 +209,7 @@
   "error_code_TOKEN_WAS_CHANGED": "You have been signed out due to changing password!",
   "error_code_INVALID_PARAM": "Invalid information, please try again",
   "error_code_SPAM_OTP": "Verification code can only be re-acquired after 60s",
+  "error_code_2086": "Note must be less than 255 characters.",
   "error_code_2003": "Your user login must use 3-255 characters and cannot contain spaces.",
   "error_code_2062": "Incorrect Password or User Login. Please make sure your details are correct and try again",
   "error_code_2061": "Please wait a minute and reset password again",
