--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -83,7 +83,7 @@
   "lang_hide": "Hide",
   "lang_show_more": "Show more",
   "lang_number_of_subscribers": "Number of Subscribers",
-  "lang_segment_id": "Segment Id",
+  "lang_segment_id": "Segment ID",
   "lang_segment_name": "Segment Name",
   "lang_segment_name_is_required": "Please enter segment name",
   "lang_generate": "Generate",
