update logic compare email cfonirm, fix button pin form

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -109,7 +109,7 @@
   "lang_force_to_change_password_successfully": "Force to change password  successfully",
   "lang_confirm_force_change_password": "Do you want to force user login <0>{{user}}</0> to change password from next login?",
   "lang_confirm_cancel_force_change_password": "Do you want to cancel changing password request for user login <0>{{user}}</0>?",
-  "lang_timeout_cannot_be_connected_server": "Timeout, cannot be connected server",
+  "error_code_ECONNABORTED": "Timeout, cannot be connected server",
   "lang_sending_reset_password_success": "Send reset password request successfully",
   "lang_sending_reset_password_request": "Sending reset password request...",
   "lang_confirm_delete_notification": "Enter your email to delete notification <0>{{notification}}</0>?",
