--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -208,8 +208,8 @@
   "lang_pin_not_match": "PIN did not match. Please try again",
   "lang_confirm_your_new_pin": "Confirm Your New PIN",
   "error_code_ERR_NETWORK": "Network Error",
-  "error_code_INVALID_ARGUMENT": "Network Error",
-  "error_code_INVALID_TOKEN": "Client specified an invalid argument. Check error message and error details for more information",
+  "error_code_INVALID_ARGUMENT": "Client specified an invalid argument. Check error message and error details for more information",
+  "error_code_INVALID_TOKEN": "1 Failed PIN Attempt",
   "error_code_2001": "Please enter full name",
   "error_code_USER_NOT_EXIST": "",
   "error_code_INVALID_SEGMENTATION": "",
@@ -226,24 +226,24 @@
   "error_code_SPAM_OTP": "Verification code can only be re-acquired after 60s",
   "error_code_8001": "This user doesn't exist. Please try again.",
   "error_code_2012": "Invalid user login ID. Please try another one.",
-  "error_code_2008": "Please select status",
+  "error_code_2008": "Invalid user status. Please try again.",
   "error_code_2009": "Please generate password ",
   "error_code_2015": "Please select sitename",
   "error_code_2058": "User is disable",
   "error_code_2013": "Your User ID is inactive",
   "error_code_2022": "Your User ID is closed",
   "error_code_2086": "Note must be less than 255 characters.",
-  "error_code_2003": "Your user login must use 3-255 characters and cannot contain spaces.",
+  "error_code_2003": "Please enter user login",
   "error_code_2062": "Incorrect Password or User Login. Please make sure your details are correct and try again",
   "error_code_2061": "Please wait a minute and reset password again",
-  "error_code_2089": "Your PIN has been expired. Please relogin and change your PIN",
-  "error_code_2010": "Your password must include 8-25 characters and contain at least one lowercase, one capital letter and one number.",
+  "error_code_2089": "This PIN create request has expired",
+  "error_code_2010": "Your password must have 8-255 characters and contain at least one lowercase letter one capital letter and one number.",
   "error_code_2011": "Incorrect Password",
   "error_code_2077": "Verification code expired.",
   "error_code_2000": "Sorry, an unknown error has occurred. Please contact IRESS support.",
   "error_code_2090": "Password is required",
   "error_code_2004": "Invalid email address. Please try again",
-  "error_code_2002": "This user login is already taken. Please try another one.",
+  "error_code_2002": "This user login is already taken. Please try another one",
   "error_code_2078": "Incorrect verification code. Please retry again",
   "error_code_2080": "New password needs to be different from three latest ones",
   "error_code_3001": "It looks like you are accessing the wrong environment. Questions or confusions? Email hello@equix.app, and a team member of us will be happy to help.",
