--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,4 +1,5 @@
 {
+  "lang_title_fetch_report": "Please sign in to select the Security Code",
   "lang_created_time": "created time",
   "lang_attachment": "attachment",
   "lang_date_of_birth_invalid": "Date of Birth invalid",
