add create articles form

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,4 +1,35 @@
 {
+  "lang_traded_securities": "Traded Securities",
+  "lang_equities": "Equities",
+  "lang_warrants": "Warrants",
+  "lang_etf": "ETF",
+  "lang_preference_shares": "Preference Shares",
+  "lang_tracrs": "TraCRs",
+  "lang_depositary_receipt": "Depositary Receipt",
+  "lang_convertible_notes": "Convertible Notes",
+  "lang_fixed_interest": "Fixed Interest",
+  "lang_equity_call_options": "Equity Call Options",
+  "lang_equity_put_options": "Equity Put Options",
+  "lang_lepos": "LEPOs",
+  "lang_futures_cal_options": "Futures Call Options",
+  "lang_futures_put_options": "Futures Put Options",
+  "lang_index_call_options": "Index Call Options",
+  "lang_index_put_options": "Index Put Options",
+  "lang_options": "Options",
+  "lang_futures": "Futures",
+  "lang_exchange_traded_cfds": "Exchange Traded CFDs",
+  "lang_commodities": "Commodities",
+  "lang_statistics": "Statistics",
+  "lang_foreign_exchange": "Foreign Exchange",
+  "lang_indices": "Indices",
+  "lang_security_code": "Security Code",
+  "lang_security_type": "Security Type",
+  "lang_file_attachment": "File Attachment",
+  "lang_thumbnail_image": "Thumbnail image",
+  "lang_choose_image": "Choose Image",
+  "lang_choose_file": "Choose File",
+  "lang_enter_your_content": "Enter your content",
+  "lang_custom": "Custom",
   "lang_creating_pin_request_has_expired": "Creating PIN request has expired",
   "lang_url_require": "Please select URL",
   "lang_describe_confirm_edit": "Enter your email to edit notification",
@@ -53,7 +84,6 @@
   "lang_customer_support_email": "Customer support: <0/> <1>{{email}}</1>",
   "lang_powered_by": "Powered by",
   "lang_segment_details": "Segment Details",
-  "lang_sign_out": "Sign Out",
   "lang_confirm_logout": "Are you sure that you want to sign out?",
   "lang_segment_name_min_max_characters": "Segment name must include 3 - 64 characters",
   "lang_preview_new_segment": "preview new segment",
@@ -180,7 +210,8 @@
   "lang_user_management": "User Management",
   "lang_sign_in_to_your_account": "Sign In To Your Account",
   "lang_cms_portal": "CMS PORTAL",
-  "lang_sign_in": "SIGN IN",
+  "lang_sign_in": "Sign In",
+  "lang_sign_out": "Sign Out",
   "lang_email": "Email",
   "lang_email_invalid": "The email is invalid",
   "lang_email_required": "Email is required",
