--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,4 +1,7 @@
 {
+  "lang_delete_article_unsuccessfully": "Delete article unsuccessfully",
+  "lang_delete_article_successfully": "Delete article  successfully",
+  "lang_enter_your_email_to_delete_article": "Enter your email to delete article",
   "lang_traded_securities": "Traded Securities",
   "lang_equities": "Equities",
   "lang_warrants": "Warrants",
