add autocomplete global field

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,4 +1,5 @@
 {
+  "lang_enter_sitename": "Enter Sitename",
   "lang_traded_securities": "Traded Securities",
   "lang_equities": "Equities",
   "lang_warrants": "Warrants",
