--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,4 +1,12 @@
 {
+  "lang_fetch_report": "Fetch Report",
+  "lang_report_name": "Report Name",
+  "lang_report_type": "Report Type",
+  "lang_template_id": "Template Id",
+  "lang_disabled": "Disabled",
+  "lang_enabled": "Enabled",
+  "lang_disabled_for_all": "Disabled for all",
+  "lang_enabled_for_all": "Enable for all",
   "lang_creating_pin_request_has_expired": "Creating PIN request has expired",
   "lang_url_require": "Please select URL",
   "lang_describe_confirm_edit": "Enter your email to edit notification",
