--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -43,8 +43,8 @@
   "lang_enter_your_content": "Enter your content",
   "lang_custom": "Custom",
   "lang_title_fetch_report": "Please sign in to select the Security Code",
-  "lang_created_time": "created time",
-  "lang_attachment": "attachment",
+  "lang_created_time": "Created time",
+  "lang_attachment": "Attachment",
   "lang_date_of_birth_invalid": "Date of Birth invalid",
   "lang_fetch_report": "Fetch Report",
   "lang_report_name": "Report Name",
