handle create articles

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -42,7 +42,7 @@
   "lang_choose_file": "Choose File",
   "lang_enter_your_content": "Enter your content",
   "lang_custom": "Custom",
-  "lang_title_fetch_report": "Please sign in to select the Security Code",
+  "lang_please_sign_in_iress": "Please sign in to select the Security Code",
   "lang_created_time": "created time",
   "lang_attachment": "attachment",
   "lang_date_of_birth_invalid": "Date of Birth invalid",
