--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,4 +1,5 @@
 {
+  "lang_expire_date_require": "Expire date is invalid",
   "lang_please_enter_password": "Please enter password",
   "lang_please_enter_email": "Please enter email",
   "lang_please_enter_sitename": "Please enter sitename",
