--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,4 +1,13 @@
 {
+  "lang_please_choose_sitename": "Please choose sitename",
+  "lang_must_have_at_least_one_security_code": "Must have at least 1 security code",
+  "lang_create_articles_successfully": "Create articles successfully",
+  "lang_create_articles_unsuccessfully": "Create articles unsuccessfully",
+  "lang_please_enter_security_code": "Please enter security code",
+  "lang_please_choose_security_type": "Please choose security type",
+  "lang_please_enter_title": "Please enter title",
+  "lang_please_choose_image": "Please choose image",
+  "lang_please_enter_content": "Please enter content",
   "lang_please_enter_password": "Please enter password",
   "lang_please_enter_email": "Please enter email",
   "lang_please_enter_sitename": "Please enter sitename",
