fix bug cms-303

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,4 +1,5 @@
 {
+  "Lang_there_is_no_change_in_the_notification": "There is no change in the notification",
   "lang_invalid_url": "Invalid URL",
   "lang_please_choose_sitename": "Please choose sitename",
   "lang_must_have_at_least_one_security_code": "Must have at least 1 security code",
