fix bug cms-240

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -94,7 +94,7 @@
   "lang_update_segment_unsuccessfully": "Unable to update segment information",
   "lang_field_required": "Please fill in this field",
   "lang_schedule_time_required": "Schedule time is required",
-  "lang_validate_message": "Undefined must be 1 to 192 characters",
+  "lang_validate_message": "Message must be 1 to 192 characters",
   "lang_message_required": "Message is required",
   "lang_validate_title": "Title must include 1-64 characters",
   "lang_title_required": "Title is required",
