add articles details, edit form

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,4 +1,6 @@
 {
+  "lang_edit_articles": "Edit Articles",
+  "lang_articles_details": "Articles Details",
   "lang_please_choose_sitename": "Please choose sitename",
   "lang_must_have_at_least_one_security_code": "Must have at least 1 security code",
   "lang_create_articles_successfully": "Create articles successfully",
