submit edit articles

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -5,6 +5,8 @@
   "lang_invalid_url": "Invalid URL",
   "lang_please_choose_sitename": "Please choose sitename",
   "lang_must_have_at_least_one_security_code": "Must have at least 1 security code",
+  "lang_update_articles_successfully": "Create articles successfully",
+  "lang_update_articles_unsuccessfully": "Create articles unsuccessfully",
   "lang_create_articles_successfully": "Create articles successfully",
   "lang_create_articles_unsuccessfully": "Create articles unsuccessfully",
   "lang_please_enter_security_code": "Please enter security code",
