--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,4 +1,6 @@
 {
+  "lang_funds": "Funds",
+  "lang_other": "Other",
   "lang_edit_articles": "Edit Articles",
   "lang_articles_details": "Articles Details",
   "Lang_there_is_no_change_in_the_notification": "There is no change in the notification",
