--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -291,7 +291,7 @@
   "error_code_100002": "An error occurred, please contact your administrator",
   "error_code_100003": "You have been logged out as you have lost your session",
   "error_code_INVALID_TIME": "Expiration time must be larger than schedule time",
-  "error_code_INVALID_ARGUMENT": "Client specified an invalid argument. Check error message and error details for more information",
+  "error_code_INVALID_ARGUMENT": "Unfortunately, we cannot process your request right now. Please try again late",
   "error_code_INVALID_TOKEN": "1 Failed PIN Attempt",
   "error_code_2001": "Please enter full name",
   "error_code_USER_NOT_EXIST": "",
@@ -302,6 +302,7 @@
   "error_code_100005": "Display the pop-up requires to enter 2FA code",
   "error_code_100006": "Your account has been deactivated. Please contact your administrator",
   "error_code_100007": "The 2FA code is incorrect",
+  "error_code_100000": "Your session has expired",
   "error_code_rate_limit": "API rate limit exceeded",
   "error_code_undefined": "Something went wrong from systems!",
   "error_code_TOKEN_WAS_CHANGED": "You have been signed out due to changing password!",
