add required for expitr in bug cm-309

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,4 +1,5 @@
 {
+  "lang_enter_expire": "Please enter expire",
   "lang_funds": "Funds",
   "lang_other": "Other",
   "lang_edit_articles": "Edit Articles",
