fix sbug report

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,4 +1,7 @@
 {
+  "lang_update_report_information_unsuccessfully": "Update report information unsuccessfully",
+  "lang_there_is_no_change_in_the_report_information": "There is no change in the report information.",
+  "lang_update_report_information_successfully": "Update report information successfully.",
   "lang_funds": "Funds",
   "lang_other": "Other",
   "lang_edit_articles": "Edit Articles",
